glibc (2.6.1-4) unstable; urgency=low

  * Disable any/local-ipv6-lookup.diff as it is causing breakages. 
    Closes: bug#441857.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 11 Sep 2007 16:17:11 +0200

glibc (2.6.1-3) unstable; urgency=low

  * sysdeps/amd64.mk: uses x86_64 headers also for the i486 flavour now
    that they are compatible.
  * sysdeps/i386.mk: uses x86_64 headers also for the main flavour.
  * debian/local/etc_default/locale: remove.  Closes: bug#441360.
  * sysdeps/*.mk: don't provide include symlink for bi-arch, but only
    an empty directory.
  * debian/rules.d/debhelper.mk: modify nscd/DEBIAN/control during build
    to workaround a dpkg-shlibdeps bug.  Closes: bug#433723.
  * debian/local/manpages/nscd.conf.5: document the persistent and shared
    cache options.  Closes: bug#338504.
  * patches/all/local-alias-UTF-8.diff: encode locales.alias in UTF-8.
    Closes: bug#404433.
  * debhelper.in/locales.links, debhelper.in/locales.install: move
    locales.alias into /etc and provide a symlink in
    /usr/share/locale/locale.alias.
  * patches/localedata/tailor-iso14651_t1.diff: fix fi_FI locale.  Closes:
    bug#441026.
  * kfreebsd/local-sysdeps.diff: update to revision 1998 (from glibc-bsd).
  * sysdeps/kfreebsd-amd64.mk: uses x86_64 headers also for the i486 flavour
    now that they are compatible.
  * any/local-sysmacros.diff: new patch to declare "major", "minor" and
    "makedev" as inline function instead of macros.  Closes: #439859.
  * debhelper.in/libc.postinst, debhelper.in/libc.templates: prompt user
    with debconf if it is available.  Closes: #440964.
  * debian/control.in/libc: suggests debconf | debconf-2.0.
  * Update Brazilian Portuguese debconf translation, by Felipe Augusto van de
    Wiel.
  * Update Vietnamese debconf translation, by Clytie Siddall.
  * Update Basque debconf translation, by Piarres Beobide.
  * Update Swedish debconf translation, by Daniel Nylander.