@@ -7,19 +7,19 @@
 -# define major(dev) gnu_dev_major (dev)
 -# define minor(dev) gnu_dev_minor (dev)
 -# define makedev(maj, min) gnu_dev_makedev (maj, min)
-+static inline unsigned int
++static __inline unsigned int
 +__NTH (major (unsigned long long int dev))
 +{
 +  return gnu_dev_major (dev);
 +}
 +
-+static inline unsigned int
++static __inline unsigned int
 +__NTH (minor (unsigned long long int dev))
 +{
 +  return gnu_dev_minor (dev);
 +}
 +
-+static inline unsigned long long int
++static __inline unsigned long long int
 +__NTH (makedev (unsigned int maj, unsigned int min))
 +{
 +  return gnu_dev_makedev (maj, min);
