@@ -1,9 +1,11 @@
 glibc (2.6.1-4) unstable; urgency=low
 
-  * Disable any/local-ipv6-lookup.diff as it is causing breakages. 
+  * Disable any/local-ipv6-lookup.diff as it is causing breakages.
     Closes: bug#441857.
+  * any/local-sysmacros.diff: use __inline instead of inline for 
+    compatibility with ANSI.  Closes: #441959.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 11 Sep 2007 16:17:11 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 12 Sep 2007 17:28:09 +0200
 
 glibc (2.6.1-3) unstable; urgency=low
 
